--- a/app/templates/admin/admin_templates/base_admin_template.html
+++ b/app/templates/admin/admin_templates/base_admin_template.html
@@ -18,6 +18,10 @@
   <link href="{{ url_for('static', filename='css/light-bootstrap-dashboard.css') }}" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="{{ url_for('static', filename='css/demo.css') }}" rel="stylesheet" />
+    <!-- MDBootstrap Datatables  -->
+    <link href="css/addons/datatables.min.css" rel="stylesheet">
+    <!-- MDBootstrap Datatables  -->
+    <script type="text/javascript" src="js/addons/datatables.min.js"></script>
 </head>
 
 <body>
