Major functionalities complete

--- a/app/templates/superuser/superuser_templates/base_superuser_template.html
+++ b/app/templates/superuser/superuser_templates/base_superuser_template.html
@@ -78,7 +78,8 @@
             </a>
           </li>
           <li>
-            <a class="nav-link" href="/admin/analytics">
+            <!--/admin/analytics-->
+            <a class="nav-link" href="#">
               <i class="fa fa-bar-chart" aria-hidden="true"></i>
               <p>Analytics</p>
             </a>
