--- a/app/templates/superuser/dashboard.html
+++ b/app/templates/superuser/dashboard.html
@@ -17,19 +17,19 @@
       <div class="col-md-4">
         <div class="card ">
           <div class="card-header ">
-            <h4 class="card-title">Email Statistics</h4>
-            <p class="card-category">Last Campaign Performance</p>
+            <h4 class="card-title">Attendance Statistics</h4>
+            <p class="card-category">Last Event Performance</p>
           </div>
           <div class="card-body ">
             <div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div>
             <div class="legend">
-              <i class="fa fa-circle text-info"></i> Open
-              <i class="fa fa-circle text-danger"></i> Bounce
-              <i class="fa fa-circle text-warning"></i> Unsubscribe
+              <i class="fa fa-circle text-info"></i> ICT
+              <i class="fa fa-circle text-danger"></i> Finance
+              <i class="fa fa-circle text-warning"></i> HR
             </div>
             <hr>
             <div class="stats">
-              <i class="fa fa-clock-o"></i> Campaign sent 2 days ago
+              <i class="fa fa-clock-o"></i> Attendance in the previous events
             </div>
           </div>
         </div>
@@ -37,7 +37,7 @@
       <div class="col-md-8">
         <div class="card ">
           <div class="card-header ">
-            <h4 class="card-title">Users Behavior</h4>
+            <h4 class="card-title">Users Registration</h4>
             <p class="card-category">24 Hours performance</p>
           </div>
           <div class="card-body ">
@@ -45,9 +45,9 @@
           </div>
           <div class="card-footer ">
             <div class="legend">
-              <i class="fa fa-circle text-info"></i> Open
-              <i class="fa fa-circle text-danger"></i> Click
-              <i class="fa fa-circle text-warning"></i> Click Second Time
+              <i class="fa fa-circle text-info"></i> ICT
+              <i class="fa fa-circle text-danger"></i> HR
+              <i class="fa fa-circle text-warning"></i> Finance
             </div>
             <hr>
             <div class="stats">
@@ -61,20 +61,20 @@
       <div class="col-md-6">
         <div class="card ">
           <div class="card-header ">
-            <h4 class="card-title">2017 Sales</h4>
-            <p class="card-category">All products including Taxes</p>
+            <h4 class="card-title">2023 Participation</h4>
+            <p class="card-category">All Events</p>
           </div>
           <div class="card-body ">
             <div id="chartActivity" class="ct-chart"></div>
           </div>
           <div class="card-footer ">
             <div class="legend">
-              <i class="fa fa-circle text-info"></i> Tesla Model S
-              <i class="fa fa-circle text-danger"></i> BMW 5 Series
+              <i class="fa fa-circle text-info"></i> Science Week
+              <i class="fa fa-circle text-danger"></i> GLF (A New Vision for Earth)
             </div>
             <hr>
             <div class="stats">
-              <i class="fa fa-check"></i> Data information certified
+              <i class="fa fa-check"></i> Data information
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
                         </label>
                       </div>
                     </td>
-                    <td>Sign contract for "What are conference organizers afraid of?"</td>
+                    <td>Create Science Week sessions</td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
                         <i class="fa fa-edit"></i>
@@ -117,7 +117,7 @@
                         </label>
                       </div>
                     </td>
-                    <td>Lines From Great Russian Literature? Or E-mails From My Boss?</td>
+                    <td>Generate attendance list at the end of the session</td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
                         <i class="fa fa-edit"></i>
@@ -136,8 +136,7 @@
                         </label>
                       </div>
                     </td>
-                    <td>Flooded: One year later, assessing what was lost and what was found when a ravaging rain swept
-                      through metro Detroit
+                    <td>Send session invite to all staff
                     </td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
@@ -157,45 +156,7 @@
                         </label>
                       </div>
                     </td>
-                    <td>Create 4 Invisible User Experiences you Never Knew About</td>
-                    <td class="td-actions text-right">
-                      <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
-                        <i class="fa fa-edit"></i>
-                      </button>
-                      <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-simple btn-link">
-                        <i class="fa fa-times"></i>
-                      </button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="form-check">
-                        <label class="form-check-label">
-                          <input class="form-check-input" type="checkbox" value="">
-                          <span class="form-check-sign"></span>
-                        </label>
-                      </div>
-                    </td>
-                    <td>Read "Following makes Medium better"</td>
-                    <td class="td-actions text-right">
-                      <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
-                        <i class="fa fa-edit"></i>
-                      </button>
-                      <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-simple btn-link">
-                        <i class="fa fa-times"></i>
-                      </button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="form-check">
-                        <label class="form-check-label">
-                          <input class="form-check-input" type="checkbox" value="" disabled>
-                          <span class="form-check-sign"></span>
-                        </label>
-                      </div>
-                    </td>
-                    <td>Unfollow 5 enemies from twitter</td>
+                    <td>Create powerpoint with QR Code embedded</td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
                         <i class="fa fa-edit"></i>
