--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -32,10 +32,10 @@
                                  <div class="container">
                                     <div class="row justify-content-center">
                                        <div class="col-md-6 text-center mb-5 index_title">
-                                          <img src="{{ url_for('static', filename='img/cifor-icraf-logo.png') }}"
-                                             width="230px" height="100px">
+                                          <img src="{{ url_for('static', filename='img/savannah_logo.png') }}"
+                                             width="270px" height="200px">
                                           <br><br><br>
-                                          <h1 class="heading-section">CIFOR-ICRAF EVENTS</h1>
+                                          <h1 class="heading-section">SAVANNAH ONLINE SERVICE</h1>
                                        </div>
                                     </div>
                                  </div>
