REST APIs CRUD implementation

--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -16,19 +16,19 @@
       <div class="col-md-4">
         <div class="card ">
           <div class="card-header ">
-            <h4 class="card-title">Attendance Statistics</h4>
-            <p class="card-category">Last Event Performance</p>
+            <h4 class="card-title">Customer Type Comparison</h4>
+            <p class="card-category">Last Month's Performance</p>
           </div>
           <div class="card-body ">
             <div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div>
             <div class="legend">
-              <i class="fa fa-circle text-info"></i> ICT
-              <i class="fa fa-circle text-danger"></i> Finance
-              <i class="fa fa-circle text-warning"></i> HR
+              <i class="fa fa-circle text-info"></i> Walk-In Customers
+              <i class="fa fa-circle text-danger"></i> Online Customers
+              <i class="fa fa-circle text-warning"></i> Phone Call Customers
             </div>
             <hr>
             <div class="stats">
-              <i class="fa fa-clock-o"></i> Attendance in the previous events
+              <i class="fa fa-clock-o"></i> Orders made in the last one month
             </div>
           </div>
         </div>
@@ -36,7 +36,7 @@
       <div class="col-md-8">
         <div class="card ">
           <div class="card-header ">
-            <h4 class="card-title">Users Registration</h4>
+            <h4 class="card-title">Customer Activity</h4>
             <p class="card-category">24 Hours performance</p>
           </div>
           <div class="card-body ">
@@ -44,9 +44,9 @@
           </div>
           <div class="card-footer ">
             <div class="legend">
-              <i class="fa fa-circle text-info"></i> ICT
-              <i class="fa fa-circle text-danger"></i> HR
-              <i class="fa fa-circle text-warning"></i> Finance
+              <i class="fa fa-circle text-info"></i> Walk-In Customers
+              <i class="fa fa-circle text-danger"></i> Online Customers
+              <i class="fa fa-circle text-warning"></i> Phone Call Customers
             </div>
             <hr>
             <div class="stats">
@@ -60,16 +60,16 @@
       <div class="col-md-6">
         <div class="card ">
           <div class="card-header ">
-            <h4 class="card-title">2023 Participation</h4>
-            <p class="card-category">All Events</p>
+            <h4 class="card-title">2023 Performance</h4>
+            <p class="card-category">All Orders</p>
           </div>
           <div class="card-body ">
             <div id="chartActivity" class="ct-chart"></div>
           </div>
           <div class="card-footer ">
             <div class="legend">
-              <i class="fa fa-circle text-info"></i> Science Week
-              <i class="fa fa-circle text-danger"></i> GLF (A New Vision for Earth)
+              <i class="fa fa-circle text-info"></i> Walk-In Customers
+              <i class="fa fa-circle text-danger"></i> Online Customers
             </div>
             <hr>
             <div class="stats">
@@ -97,7 +97,7 @@
                         </label>
                       </div>
                     </td>
-                    <td>Create Science Week sessions</td>
+                    <td>Create Customer Performance Reports</td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
                         <i class="fa fa-edit"></i>
@@ -116,7 +116,7 @@
                         </label>
                       </div>
                     </td>
-                    <td>Generate attendance list at the end of the session</td>
+                    <td>Send Promotional emails</td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
                         <i class="fa fa-edit"></i>
@@ -135,7 +135,7 @@
                         </label>
                       </div>
                     </td>
-                    <td>Send session invite to all staff
+                    <td>Track deliveries
                     </td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
@@ -155,7 +155,7 @@
                         </label>
                       </div>
                     </td>
-                    <td>Create powerpoint with QR Code embedded</td>
+                    <td>Print Customers list</td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-link">
                         <i class="fa fa-edit"></i>
