--- a/app/templates/admin/admin_templates/base_admin_template.html
+++ b/app/templates/admin/admin_templates/base_admin_template.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='img/apple-icon.png') }}">
   <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.ico') }}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>CIFOR-ICRAF EVENTS</title>
+  <title>SAVANNAH ONLINE SERVICES</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
     name='viewport' />
   <!--     Fonts and icons     -->
