--- a/app/templates/admin/customers.html
+++ b/app/templates/admin/customers.html
@@ -17,11 +17,11 @@
         </div>
         <br>
         <div class="row">
-            <a class="btn btn-success btn-fill btn-round btn-wd active ml-5" data-toggle="modal" data-target="#addUserModal">
+            <a class="btn btn-success btn-fill btn-round btn-wd active ml-5" data-toggle="modal" data-target="#addCustomerModal">
                 <i class="fa fa-user-plus" aria-hidden="true"></i>&ensp;Add Customer
             </a>
         </div>
-        <div class="modal fade modal-mini modal-primary" id="addUserModal" tabindex="-1" role="dialog"
+        <div class="modal fade modal-mini modal-primary" id="addCustomerModal" tabindex="-1" role="dialog"
             aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -33,26 +33,26 @@
                     <div class="modal-body text-center">
                         <p>Add Customer</p>
                     </div>
-                    <form method="POST" id="form_add_admin">
+                    <form method="POST" id="form_add_customer">
                         <div class="modal-body">
-                            {{ add_admin_form.hidden_tag() }}
+                            {{ add_customer_form.hidden_tag() }}
                             <div class="row">
-                                {{ add_admin_form.firstname }}
+                                {{ add_customer_form.firstname }}
                             </div><br>
                             <div class="row">
-                                {{ add_admin_form.lastname }}
+                                {{ add_customer_form.lastname }}
                             </div><br>
                             <div class="row">
-                                {{ add_admin_form.phone_number }}
+                                {{ add_customer_form.phonenumber }}
                             </div>
                         </div>
                         <div class="modal-footer">
                             <div class="row">
                                 <div class="col-6">
-                                    {{ add_admin_form.close }}
+                                    {{ add_customer_form.close }}
                                 </div>
                                 <div class="col-6">
-                                    {{ add_admin_form.submit }}
+                                    {{ add_customer_form.submit }}
                                 </div>
                             </div>
                         </div>
@@ -69,52 +69,25 @@
                 <div class="card-body table-full-width table-responsive">
                     <table class="table table-hover">
                         <thead>
+                            <th>#</th>
                             <th>Customer Code</th>
                             <th>Name</th>
                             <th>Phone Number</th>
-                            <th></th>
                             <th></th>
                         </thead>
                         <tbody>
                             {% for customer in customers %}
                             <tr>
+                                <td>{{ customer.id }}</td>
                                 <td>{{ customer.customer_code }}</td>
                                 <td>{{ customer.first_name+' '+customer.last_name }}</td>
                                 <td>{{ customer.phone_no }}</td>     
                                 <td>
-                                    <a class="btn btn-warning btn-fill active btn-round" data-toggle="modal" data-target="#adminActionModal{{ customer.id }}">
-                                        Action
-                                    </a>
-                                </td>
-                                <td>
-                                    <a class="btn btn-danger btn-fill btn-round active deleteAdmin" id="{{ customer.id }}" data_id="{{ customer.id }}">
+                                    <a class="btn btn-danger btn-fill btn-round active deleteCustomer" id="{{ customer.id }}" data_id="{{ customer.id }}">
                                         <i class="fa fa-user-times" aria-hidden="true"></i>&ensp;Delete
                                     </a>
                                 </td>
                             </tr>
-                            <div class="modal fade modal-mini modal-primary" id="adminActionModal{{ customer.id }}" tabindex="-1" role="dialog"
-                                aria-labelledby="myModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header justify-content-center">
-                                            <div class="modal-profile">
-                                                <i class="fa fa-user-circle" aria-hidden="true"></i>
-                                            </div>
-                                        </div>
-                                        <div class="modal-body text-center">
-                                            <p>Select an action to apply</p>
-                                            <br>
-                                            <div class="row">
-                                                {{ admin_action_form.actions }}
-                                            </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            {{ admin_action_form.close }}
-                                            {{ admin_action_form.submit(id=customer.id ) }}        
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                             {% endfor %}
                         </tbody>
                     </table>
