--- a/app/templates/admin/orders.html
+++ b/app/templates/admin/orders.html
@@ -18,7 +18,7 @@
         <br>
         <div class="row">
             <a class="btn btn-success btn-fill btn-round btn-wd active ml-5" data-toggle="modal" data-target="#addUserModal">
-                <i class="fa fa-user-plus" aria-hidden="true"></i>&ensp;Add Order
+                <i class="fa fa-plus" aria-hidden="true"></i>&ensp;Add Order
             </a>
         </div>
         <div class="modal fade modal-mini modal-primary" id="addUserModal" tabindex="-1" role="dialog"
@@ -27,32 +27,29 @@
                 <div class="modal-content">
                     <div class="modal-header justify-content-center">
                         <div class="modal-profile">
-                            <i class="fa fa-user-plus" aria-hidden="true"></i>
+                            <i class="fa fa-plus" aria-hidden="true"></i>
                         </div>
                     </div>
                     <div class="modal-body text-center">
                         <p>Add Order</p>
                     </div>
-                    <form method="POST" id="form_add_admin">
+                    <form method="POST" id="form_add_order">
                         <div class="modal-body">
-                            {{ add_admin_form.hidden_tag() }}
+                            {{ add_order_form.hidden_tag() }}
                             <div class="row">
-                                {{ add_admin_form.firstname }}
+                                {{ add_order_form.order_cost }}
                             </div><br>
                             <div class="row">
-                                {{ add_admin_form.lastname }}
-                            </div><br>
-                            <div class="row">
-                                {{ add_admin_form.phone_number }}
+                                {{ add_order_form.delivery_time }}
                             </div>
                         </div>
                         <div class="modal-footer">
                             <div class="row">
                                 <div class="col-6">
-                                    {{ add_admin_form.close }}
+                                    {{ add_order_form.close }}
                                 </div>
                                 <div class="col-6">
-                                    {{ add_admin_form.submit }}
+                                    {{ add_order_form.submit }}
                                 </div>
                             </div>
                         </div>
@@ -89,7 +86,7 @@
                                     </a>
                                 </td>
                                 <td>
-                                    <a class="btn btn-danger btn-fill btn-round active deleteAdmin" id="{{ order.id }}" data_id="{{ order.id }}">
+                                    <a class="btn btn-danger btn-fill btn-round active deleteOrder" id="{{ order.id }}" data_id="{{ order.id }}">
                                         <i class="fa fa-user-times" aria-hidden="true"></i>&ensp;Delete
                                     </a>
                                 </td>
@@ -107,12 +104,11 @@
                                             <p>Select an action to apply</p>
                                             <br>
                                             <div class="row">
-                                                {{ admin_action_form.actions }}
+                                                
                                             </div>
                                         </div>
                                         <div class="modal-footer">
-                                            {{ admin_action_form.close }}
-                                            {{ admin_action_form.submit(id=order.id ) }}        
+                                                  
                                         </div>
                                     </div>
                                 </div>
