--- a/app/templates/admin/admin_templates/base_admin_template.html
+++ b/app/templates/admin/admin_templates/base_admin_template.html
@@ -155,13 +155,16 @@
 <script src="{{ url_for('static', filename='js/core/bootstrap.min.js') }}" type="text/javascript"></script>
 <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
 <script src="{{ url_for('static', filename='js/plugins/bootstrap-switch.js') }}"></script>
-<!--  Google Maps Plugin    -->
+<!--  Bootbox Plugin    -->
+<script src="{{ url_for('static', filename='js/bootbox/bootbox.min.js') }}"></script>
 <!--  Chartist Plugin  -->
 <script src="{{ url_for('static', filename='js/plugins/chartist.min.js') }}"></script>
 <!--  Notifications Plugin    -->
 <script src="{{ url_for('static', filename='js/plugins/bootstrap-notify.js') }}"></script>
 <!-- Control Center for Light Bootstrap Dashboard: scripts for the example pages etc -->
 <script src="{{ url_for('static', filename='js/light-bootstrap-dashboard.js') }}" type="text/javascript"></script>
+<!-- Mindmup Editable Plugin -->
+<script src="{{ url_for('static', filename='js/mindmup-editabletable.js') }}"></script>
 <!-- Light Bootstrap Dashboard DEMO methods, don't include it in your project! -->
 <script src="{{ url_for('static', filename='js/demo.js') }}"></script>
 <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
