--- a/app/templates/admin/orders.html
+++ b/app/templates/admin/orders.html
@@ -70,6 +70,7 @@
                     <table id="ordersEditable" class="table table-hover">
                         <thead>
                             <th>#</th>
+                            <th>Order ref. #</th>
                             <th>Customer</th>
                             <th>Amount (Ksh.)</th>
                             <th>Order Time</th>
@@ -80,6 +81,7 @@
                             {% for order in orders %}
                             <tr>
                                 <td class="uneditable id{{ loop.index }}" id="{{ order.id }}">{{ order.id }}</td> 
+                                <td class="uneditable">{{ order.order_ref }}</td> 
                                 <td class="uneditable">{{ order.first_name+' '+order.last_name }}</td>
                                 <td class="editable amount{{ loop.index }}" id="{{ order.id }}">{{ order.amount }}</td>
                                 <td class="editable time{{ loop.index }}" id="{{ order.id }}">{{ order.time }}</td>     
