Local account authentication implementation

--- a/app/templates/mail/account-verification.html
+++ b/app/templates/mail/account-verification.html
@@ -3,7 +3,7 @@
 {% block body %}
                 <div class="subtitle" style="margin-top:40px">Hi {{ firstname }},</div>
                 <div class="subtitle" style="margin-top:40px">
-                Welcome to the CIFOR-ICRAF events services. To complete your account creation, we hereby kindly ask you to verify your email address below:     
+                Welcome to the Savannah Online Services. To complete your account creation, we hereby kindly ask you to verify your email address below:     
                 </div>
                 <div class="subtitle" style="margin-top:30px">
                     <div class="submit-wrapper">
@@ -26,7 +26,7 @@
                     <span class="note">Please note:</span> If you did not initiate this email, you can safely ignore it. If you need more help or believe that this email was sent in error, feel free to <a href="mailto:{{organization['email']}}" style='color: #57b846;text-decoration: none;'>contact us</a>
                 </div>
                 <div class="subtitle" style="margin-top:40px">
-                     Thanks! - The ICT team
+                     Thanks! - The Savannah team
                 </div>
             </div>
         </div>
