--- a/app/templates/mail/admin-account-activation.html
+++ b/app/templates/mail/admin-account-activation.html
@@ -3,7 +3,7 @@
 {% block body %}
                 <div class="subtitle" style="margin-top:40px">Hi {{ firstname }},</div>
                 <div class="subtitle" style="margin-top:40px">
-                Welcome to CIFOR-ICRAF Events services. We are glad to have you here. To start off, we are going to verify and activate your account after which you will need to reset your password to a memorable yet secure one. We hereby kindly ask you to verify your email address below:     
+                Welcome to Savannah Online Services. We are glad to have you here. To start off, we are going to verify and activate your account after which you will need to reset your password to a memorable yet secure one. We hereby kindly ask you to verify your email address below:     
                 </div>
                 <div class="subtitle" style="margin-top:30px">
                     <div class="submit-wrapper">
@@ -28,7 +28,7 @@
                     Incase of any queries or challenges, please don't hesitate to <a href="mailto:{{organization['email']}}" style='color: #57b846;text-decoration: none;'>contact us</a>
                 </div>
                 <div class="subtitle" style="margin-top:40px">
-                     Thanks! - The ICT team
+                     Thanks! - The Savannah team
                 </div>
             </div>
         </div>
