--- a/app/templates/mail/mail_templates/base_mail_template.html
+++ b/app/templates/mail/mail_templates/base_mail_template.html
@@ -217,8 +217,8 @@
             <!-- Header -->
             <div>
                 <span>
-                    <img src="http://127.0.0.1:8000/static/img/mail-header.jpg" width="540px" height="210px"
-                        alt="cifor-icraf-logo"></img>
+                    <img src="http://127.0.0.1:8000/static/img/savannah_logo.png" width="440px" height="220px"
+                        alt="savannah-logo"></img>
                 </span>
                 {% block body %}{% endblock %}
  <!-- Footer -->
@@ -241,7 +241,7 @@
         </tr>
     </table>
     <div class="footer-bottom">
-        © <script>document.write(/\d{4}/.exec(Date())[0])</script> Sympha Fresh Limited <br />{{organization['location']}}
+        © <script>document.write(/\d{4}/.exec(Date())[0])</script> Savannah Limited <br />{{organization['location']}}
     </div>
 </div>
 </body>
