--- a/app/templates/public/error_templates/error.html
+++ b/app/templates/public/error_templates/error.html
@@ -33,10 +33,10 @@
                                             <div class="container">
                                                 <div class="row justify-content-center">
                                                     <div class="col-md-6 text-center mb-5 staus-page-title">
-                                                        <img src="{{ url_for('static', filename='img/cifor-icraf-logo.png') }}"
+                                                        <img src="{{ url_for('static', filename='img/savannah_logo.png') }}"
                                                             width="230px" height="100px">
                                                         <br><br>
-                                                        <h2 class="heading-section">CIFOR-ICRAF EVENTS</h2>
+                                                        <h2 class="heading-section">SAVANNAH ONLINE SERVICES</h2>
                                                         <br><br>
                                                         <h1 class="status-page-text" style="font-size: 1000%;">{{ error_code }}</h1>
                                                         <h3 class="status-page-text">{{ error_def }}</h3>
