--- a/app/templates/auth/admin/login.html
+++ b/app/templates/auth/admin/login.html
@@ -44,7 +44,11 @@ Sign In
 <div class="container-login100-form-btn">
     {{ form.submit(class="login100-form-btn") }}
 </div>
-
+<div>
+    <br>
+    <p>Don't have an account?&ensp;<a href="/auth/admin/registration"
+            style="color: inherit;text-decoration: underline;">Register</a></p>
+</div>
 <div style="margin-top: 20px">
     <!-- Display validation errors -->
 
