--- a/app/templates/mail/password-reset.html
+++ b/app/templates/mail/password-reset.html
@@ -3,7 +3,7 @@
 {% block body %}
                 <div class="subtitle" style="margin-top:40px">Hi {{ firstname }},</div>
                 <div class="subtitle" style="margin-top:40px">
-                A request has been received to change the password for your CIFOR-ICRAF Events account.     
+                A request has been received to change the password for your Savannah Online Services account.     
                 </div>
                 <div class="subtitle" style="margin-top:30px">
                     <div class="submit-wrapper">
@@ -25,7 +25,7 @@
                     <span class="note">Please note:</span> If you did not initiate this email, you can ignore it. Your password will not be changed. If you need more help or believe that this email was sent in error, feel free to <a href="mailto:{{organization['email']}}" style='color: #57b846;text-decoration: none;'>contact us</a>
                 </div>
                 <div class="subtitle" style="margin-top:40px">
-                     Thanks! - The ICT team
+                     Thanks! - The Savannah team
                 </div>
             </div>
         </div>
