Minor UI improvements

--- a/app/templates/public/public_templates/base_public_template.html
+++ b/app/templates/public/public_templates/base_public_template.html
@@ -5,7 +5,7 @@
     
     <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='img/apple-icon.png') }}">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.ico') }}">
-    <title>CIFOR-ICRAF EVENTS</title>
+    <title>SAVANNAH ONLINE SERVICES</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
