--- a/app/templates/admin/admin_templates/base_admin_template.html
+++ b/app/templates/admin/admin_templates/base_admin_template.html
@@ -108,7 +108,7 @@
                   {% endif %}  
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="/admin/profile">Profile</a>
+                  <a class="dropdown-item" href="#">Profile</a>
                   <div class="divider"></div>
                   <a class="dropdown-item" href="{{ url_for('admin_logout_page') }}"><i
                       class="fa fa-sign-out"></i>&ensp;Logout</a>
