minor server changes(redirect urls)

--- a/app/templates/mail/mail_templates/base_mail_template.html
+++ b/app/templates/mail/mail_templates/base_mail_template.html
@@ -217,7 +217,8 @@
             <!-- Header -->
             <div>
                 <span>
-                    <img src="http://127.0.0.1:8000/static/img/savannah_logo.png" width="440px" height="220px"
+		    &emsp;&emsp;&emsp;&emsp;
+                    <img src="https://pbs.twimg.com/profile_images/1735214735929249797/qJl1CERv_400x400.png" width="350px" height="350px"
                         alt="savannah-logo"></img>
                 </span>
                 {% block body %}{% endblock %}
@@ -227,7 +228,7 @@
         <tr>
             <td class="footer-item">
                 <a
-                    href="http://127.0.0.1:8000/privacy-policy">Privacy
+                    href="http://savannahservices.servehttp.com:8000/privacy-policy">Privacy
                     Policy</a>
             </td>
             <td class="footer-item">
