Testing CI/CD Integration

--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -60,7 +60,7 @@
       <div class="col-md-6">
         <div class="card ">
           <div class="card-header ">
-            <h4 class="card-title">2023 Performance</h4>
+            <h4 class="card-title">2023 Customer Type Performance</h4>
             <p class="card-category">All Orders</p>
           </div>
           <div class="card-body ">
