--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -82,7 +82,7 @@
         <div class="card  card-tasks">
           <div class="card-header ">
             <h4 class="card-title">Tasks</h4>
-            <p class="card-category">Backend development</p>
+            <p class="card-category">Todays' Tasks</p>
           </div>
           <div class="card-body ">
             <div class="table-full-width">
