--- a/app/templates/mail/admin-password-reset.html
+++ b/app/templates/mail/admin-password-reset.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="subtitle" style="margin-top:30px">
                     <div class="submit-wrapper">
-                        <a href="http://savannahservices.servehttp.com:8000/auth/admin/reset-password?verification_code={{ verification_code }}" class="btn btn-dark btn-lg" style="background-color:black; text-decoration: none;font-size: 20px ;padding: 15px 25px;
+                        <a href="http://127.0.0.1:8000/auth/admin/reset-password?verification_code={{ verification_code }}" class="btn btn-dark btn-lg" style="background-color:black; text-decoration: none;font-size: 20px ;padding: 15px 25px;
                         color: white;text-align: center;border-radius: 10px;">Reset Password
                       </a>
                       <!--<a href="http://127.0.0.1:8000/auth/admin/reset-password?verification_code={{ verification_code }}" class="btn btn-dark btn-lg" style="background-color:black; text-decoration: none;font-size: 20px ;padding: 15px 25px;
