--- a/app/templates/mail/mail_templates/base_mail_template.html
+++ b/app/templates/mail/mail_templates/base_mail_template.html
@@ -228,7 +228,7 @@
         <tr>
             <td class="footer-item">
                 <a
-                    href="http://127.0.0.1:8000/privacy-policy">Privacy
+                    href="http://savannahservices.servehttp.com/:8000/privacy-policy">Privacy
                     Policy</a>
             </td>
             <td class="footer-item">
